--- a/new_site/partials/_media-queries-sm.scss
+++ b/new_site/partials/_media-queries-sm.scss
@@ -24,7 +24,6 @@
     /* ------------- INTERNAL  768 -------------- */
         .why ul {flex-wrap: wrap;}
         .why ul li {flex: 1 1 100%;}
-        .modal-content {margin: 80px auto 100px!important; top: 100px !important;}
         .gallery {padding: 10px;}
         .gallery .slick-arrow {position: relative; display: inline-flex;  transform: none; top: auto;  margin: 0;}
     }
